--- a/style.css
+++ b/style.css
@@ -13,17 +13,140 @@ html {
 #card-array {
   display: flex;
   flex-direction: column;
+  text-align: center;
   width: 80%;
-  margin: auto;
+  margin-left: 95px;
+  /* margin-right: 50px; */
 }
 
 #buttons button {
+  width: 170px;
+  height: 160px;
+  margin: 2px;
+  font-size: 2rem;
+  border-radius: 70px;
+  justify-content: space-between;
+}
+
+button:hover {
+  animation: shake 0.1s;
+
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
+#buttons {
+  position: relative;
+  -webkit-animation: mymove 1s infinite;
+  animation: mymove 3s infinite;
+}
+
+@-webkit-keyframes mymove {
+  0% {
+    top: 0px;
+    left: 0px;
+    background: red;
+  }
+  25% {
+    top: 0px;
+    left: 100px;
+    background: blue;
+  }
+  50% {
+    top: 100px;
+    left: 100px;
+    background: yellow;
+  }
+  75% {
+    top: 100px;
+    left: 0px;
+    background: green;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    background: red;
+  }
+}
+
+@keyframes mymove {
+  0% {
+    top: 0px;
+    left: 0px;
+    background: red;
+  }
+  25% {
+    top: 0px;
+    left: 100px;
+    background: blue;
+  }
+  50% {
+    top: 100px;
+    left: 100px;
+    background: yellow;
+  }
+  75% {
+    top: 100px;
+    left: 0px;
+    background: green;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    background: red;
+  }
+}
+
+/* #card-array {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+  position: relative;
+} */
+
+/* /* #buttons button {
   width: 150px;
   height: 150px;
   margin: 2px;
   font-size: 2rem;
   /* background: black; */
-}
+/* }  */
 
 .face-down {
   background: black;
@@ -36,4 +159,50 @@ html {
 #reset {
   width: 50px;
   height: 30px;
+}
+
+div.scorepanel ul {
+  width: 300px;
+  justify-content: space-between;
+  display: flex;
+  list-style: none;
+}
+
+.winnerScreen {
+  width: 300px;
+  height: 150px;
+  margin: auto;
+  background-color: gray;
+  display: none;
+  border: 1px solid green;
+  position: absolute;
+  top: 0;
+  left: 100px;
+  font-family: fantasy;
+  text-align: center;
+  color: white;
+  border-radius: 100px;
+}
+.scorepanel {
+  display: flex;
+  justify-content: space-evenly;
+  /* list-style: none; */
+}
+.outcome {
+  color: black;
+}
+
+#fireworks {
+  width: 900px;
+  height: 800px;
+  /* background-image:url(); */
+  display: none;
+  top: 0;
+  position: absolute;
+  border: 1px solid pink;
+}
+
+#fireworks img {
+  width: 1600px;
+  height: 1000px;
 }
